# find-my-images

./: .gitignore  Notes  db.sqlite3  example.env  main.py  pyproject.toml
.docker/: docker-compose.dev.yaml
backend/: .gitignore  pyrightconfig.json
backend/.zed/: settings.json
backend/config/: settings.py  urls.py
backend/gallery/: serializers.py
backend/gallery/migrations/: 0001_initial.py  0002_gallery_description_gallery_uid_galleryimage_order.py
backend/gallery/services/: face_embeddings.py
backend/users/: api.py  models.py  serializers.py
backend/users/migrations/: 0002_enable_pgvector.py
config/: settings.py  urls.py
fr_models/: face_detection_yunet_2026may.onnx
frontend/: components.json  example.env  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/forgot-password/: page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/api/auth/forgot-password/: route.ts
frontend/src/app/api/auth/login/: route.ts
frontend/src/components/auth/: forgot-password-form.tsx  login-form.tsx  logout-button.tsx  register-form.tsx  reset-password-form.tsx
frontend/src/components/theme/: theme-provider.tsx
frontend/src/schemas/: change-password-form.schema.ts  forgot-password.schema.ts  loginFormSchema.ts  register-form.schema.ts  reset-password.schema.ts
gallery/: api.py  models.py
gallery/services/: process_gallery_image.py
users/: models.py  serializers.py  urls.py
users/migrations/: 0001_initial.py
(+3 files in other folders)
