[project]
name = "find-my-images"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
]

[dependency-groups]
dev = [
    "django-filter>=25.2",
    "django-stubs>=6.0.6",
    "djangorestframework-simplejwt>=5.5.1",
    "markdown>=3.10.2",
    "mypy>=2.1.0",
    "pyright>=1.1.411",
]
