[project]
name = "find-my-images"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "environs>=15.0.1",
    "numpy>=2.5.1",
    "opencv-contrib-python-headless>=5.0.0.93",
    "pgvector>=0.5.0",
    "pillow>=12.3.0",
    "psycopg[binary]>=3.3.4",
]

[dependency-groups]
dev = [
    "django-filter>=25.2",
    "django-stubs>=6.0.6",
    "djangorestframework-simplejwt>=5.5.1",
    "markdown>=3.10.2",
    "mypy>=2.1.0",
    "pyright>=1.1.411",
]
